# whisper-journal

./: .flake8  README.md  pyproject.toml
ai_journal/: __init__.py  cli.py  recorder.py  transcriber.py
tests/: __init__.py  test_cli.py  test_recorder.py  test_transcriber.py
